--- a/infrastructure/base/istio/configmap-istio-gateway-values.yaml
+++ b/infrastructure/base/istio/configmap-istio-gateway-values.yaml
@@ -5,28 +5,27 @@ metadata:
   namespace: istio-system
 data:
   values.yaml: |
-    defaults:
+    name: ""
+    revision: ""
+    replicaCount: 1
+    kind: Deployment
+    rbac:
+      enabled: true
+    serviceAccount:
+      create: true
+      annotations: {}
       name: ""
-      revision: ""
-      replicaCount:
-      kind: Deployment
-      rbac:
-        enabled: true
-      serviceAccount:
-        create: true
-        annotations: {}
-        name: ""
-      podAnnotations:
-        prometheus.io/port: "15020"
-        prometheus.io/scrape: "true"
-        prometheus.io/path: "/stats/prometheus"
-        inject.istio.io/templates: "gateway"
-        sidecar.istio.io/inject: "true"
-      securityContext: {}
-      containerSecurityContext: {}
-      service:
-        type: LoadBalancer
-        ports:
+    podAnnotations:
+      prometheus.io/port: "15020"
+      prometheus.io/scrape: "true"
+      prometheus.io/path: "/stats/prometheus"
+      inject.istio.io/templates: "gateway"
+      sidecar.istio.io/inject: "true"
+    securityContext: {}
+    containerSecurityContext: {}
+    service:
+      type: LoadBalancer
+      ports:
         - name: status-port
           port: 15021
           protocol: TCP
@@ -39,54 +38,34 @@ data:
           port: 443
           protocol: TCP
           targetPort: 443
-        annotations: {}
-        loadBalancerIP: ""
-        # loadBalancerSourceRanges:
-        # ## Cloudflare IP ranges
-        # -  103.21.244.0/22
-        # -  103.22.200.0/22
-        # -  103.31.4.0/22
-        # -  104.16.0.0/13
-        # -  104.24.0.0/14
-        # -  108.162.192.0/18
-        # -  131.0.72.0/22
-        # -  141.101.64.0/18
-        # -  162.158.0.0/15
-        # -  172.64.0.0/13
-        # -  173.245.48.0/20
-        # -  188.114.96.0/20
-        # -  190.93.240.0/20
-        # -  197.234.240.0/22
-        # -  198.41.128.0/17
-        externalTrafficPolicy: ""
-        externalIPs: []
-        ipFamilyPolicy: ""
-        ipFamilies: []
-        ## Whether to automatically allocate NodePorts (only for LoadBalancers).
-        # allocateLoadBalancerNodePorts: false
-      resources:
-        requests:
-          cpu: 100m
-          memory: 128Mi
-        limits:
-          cpu: 2000m
-          memory: 1024Mi
-      autoscaling:
-        enabled: false
-        minReplicas: 1
-        maxReplicas: 5
-        targetCPUUtilizationPercentage: 80
-        targetMemoryUtilizationPercentage: {}
-        autoscaleBehavior: {}
-      env: {}
-      labels: {}
       annotations: {}
-      nodeSelector: {}
-      tolerations: []
-      topologySpreadConstraints: []
-      affinity: {}
-      networkGateway: ""
-      imagePullPolicy: ""
-      imagePullSecrets: []
-      priorityClassName: ""
-
+      loadBalancerIP: ""
+      externalTrafficPolicy: ""
+      externalIPs: []
+      ipFamilyPolicy: ""
+      ipFamilies: []
+    resources:
+      requests:
+        cpu: 100m
+        memory: 128Mi
+      limits:
+        cpu: 2000m
+        memory: 1024Mi
+    autoscaling:
+      enabled: false
+      minReplicas: 1
+      maxReplicas: 5
+      targetCPUUtilizationPercentage: 80
+      targetMemoryUtilizationPercentage: {}
+      autoscaleBehavior: {}
+    env: {}
+    labels: {}
+    annotations: {}
+    nodeSelector: {}
+    tolerations: []
+    topologySpreadConstraints: []
+    affinity: {}
+    networkGateway: ""
+    imagePullPolicy: ""
+    imagePullSecrets: []
+    priorityClassName: ""
