--- a/infrastructure/base/istio/helmrelease-istio-gateway.yaml
+++ b/infrastructure/base/istio/helmrelease-istio-gateway.yaml
@@ -16,9 +16,9 @@ spec:
         kind: HelmRepository
         name: istio
         namespace: flux-system
-  # valuesFrom:
-  #   - kind: ConfigMap
-  #     name: istio-gateway-values
-  #     valuesKey: values.yaml
+  valuesFrom:
+    - kind: ConfigMap
+      name: istio-gateway-values
+      valuesKey: values.yaml
   
 
