--- a/infrastructure/base/istio/configmap-istio-gateway-values.yaml
+++ b/infrastructure/base/istio/configmap-istio-gateway-values.yaml
@@ -5,16 +5,48 @@ metadata:
   namespace: istio-system
 data:
   values.yaml: |
-    gateway:
-      type: LoadBalancer
-      serviceAnnotations: {}
-      ports:
-        - name: http2
-          port: 80
-          targetPort: 8080
-        - name: https
-          port: 443
-          targetPort: 8443
+    _internal_defaults_do_not_set:
+      name: ""
+      revision: ""
+      replicaCount:
+      kind: Deployment
+      rbac:
+        enabled: true
+      serviceAccount:
+        create: true
+        annotations: {}
+        name: ""
+      podAnnotations:
+        prometheus.io/port: "15020"
+        prometheus.io/scrape: "true"
+        prometheus.io/path: "/stats/prometheus"
+        inject.istio.io/templates: "gateway"
+        sidecar.istio.io/inject: "true"
+      securityContext: {}
+      containerSecurityContext: {}
+      service:
+        type: LoadBalancer
+        clusterIP: ""
+        ports:
+          - name: status-port
+            port: 15021
+            protocol: TCP
+            targetPort: 15021
+          - name: http2
+            port: 80
+            protocol: TCP
+            targetPort: 80
+          - name: https
+            port: 443
+            protocol: TCP
+            targetPort: 443
+        annotations: {}
+        loadBalancerIP: ""
+        loadBalancerSourceRanges: []
+        externalTrafficPolicy: ""
+        externalIPs: []
+        ipFamilyPolicy: ""
+        ipFamilies: []
       resources:
         requests:
           cpu: 100m
@@ -22,14 +54,36 @@ data:
         limits:
           cpu: 2000m
           memory: 1024Mi
-      autoscale:
-        enabled: false
+      autoscaling:
+        enabled: true
         minReplicas: 1
         maxReplicas: 5
+        targetCPUUtilizationPercentage: 80
+        targetMemoryUtilizationPercentage: {}
+        autoscaleBehavior: {}
+      env: {}
+      envVarFrom: []
+      strategy: {}
+      minReadySeconds:
+      readinessProbe: {}
+      labels:
+        "istio.io/dataplane-mode": ambient
+      annotations: {}
       nodeSelector: {}
       tolerations: []
+      topologySpreadConstraints: []
       affinity: {}
-      podAnnotations:
-        prometheus.io/port: "15020"
-        prometheus.io/scrape: "true"
+      networkGateway: ""
+      imagePullPolicy: ""
       imagePullSecrets: []
+      podDisruptionBudget: {}
+      terminationGracePeriodSeconds: 30
+      volumes: []
+      volumeMounts: []
+      initContainers: []
+      additionalContainers: []
+      priorityClassName: ""
+      lifecycle: {}
+      global:
+        networkPolicy:
+          enabled: false
