fix: enable ambient mode for istio-base

--- a/infrastructure/base/istio/helmrelease-istio-base.yaml
+++ b/infrastructure/base/istio/helmrelease-istio-base.yaml
@@ -13,7 +13,9 @@ spec:
         kind: HelmRepository
         name: istio
         namespace: flux-system
+  valuesFrom:
+    - kind: ConfigMap
+      name: istio-base-values
+      valuesKey: values.yaml
   install:
     createNamespace: true
-  
-
