fix: update istiod using mtls

--- a/infrastructure/base/istio/configmap-istiod-values.yaml
+++ b/infrastructure/base/istio/configmap-istiod-values.yaml
@@ -11,6 +11,10 @@ data:
       # discoverySelectors:
       #   - matchLabels:
       #       istio-injection: enabled
+      defaultConfig:
+        environment:
+          ambient:
+            enablesMtls: true
 
     pilot:
       env:
