fix: update istiod using mtls

--- a/infrastructure/base/istio/configmap-istiod-values.yaml
+++ b/infrastructure/base/istio/configmap-istiod-values.yaml
@@ -8,9 +8,9 @@ data:
     meshConfig:
       mode: ambient
       enablePrometheusMerge: false
-      # discoverySelectors:
-      #   - matchLabels:
-      #       istio-injection: enabled
+      discoverySelectors:
+        - matchLabels:
+            istio-injection: enabled
       defaultConfig:
         environment:
           ambient:
