fix: update ambient mode for cni

--- a/infrastructure/base/istio/configmap-istio-cni-values.yaml
+++ b/infrastructure/base/istio/configmap-istio-cni-values.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: istio-system
 data:
   values.yaml: |
-    ambient:
-      enabled: true
+    cni:
+      ambient:
+        enabled: true
 
