fix: update ambient mode for cni

--- a/infrastructure/base/istio/configmap-istio-cni-values.yaml
+++ b/infrastructure/base/istio/configmap-istio-cni-values.yaml
@@ -5,7 +5,8 @@ metadata:
   namespace: istio-system
 data:
   values.yaml: |
-    cni:
-      ambient:
-        enabled: true
+    default:
+      cni:
+        ambient:
+          enabled: true
 
