fix: update ambient mode for cni

--- a/infrastructure/base/istio/configmap-istio-cni-values.yaml
+++ b/infrastructure/base/istio/configmap-istio-cni-values.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: istio-system
 data:
   values.yaml: |
-    default:
+    defaults:
       cni:
         ambient:
           enabled: true
